--- a/proj-02[To Do - App]/index.html
+++ b/proj-02[To Do - App]/index.html
@@ -10,7 +10,18 @@
     <div class="container">
         <div class="todo-app">
             <h2>To-DO List <img src="images/icon.png"></h2>
+        <div class="row">
+            <input type="text" id="input-box" placeholder="Add your text">
+            <button onclick="addTask()">Add</button>
+        </div>
+        <ul id="list-container">
+            <!-- <li class="checked">tast1</li>
+            <li>tast2</li>
+            <li>tast3</li> -->
+        </ul>
         </div>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
