stopwatch css work in not done yet

--- a/stopwatch/index.html
+++ b/stopwatch/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="timer">00:00:00</div>
-    <div class="btn">
+    <div id="timer">00:00:00</div>
+    <div id="btn">
         <button id="start">Start</button>
         <button id="stop">Stop</button>
         <button id="reset">Reset</button>
