--- a/stopwatch/index.html
+++ b/stopwatch/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="timer">00:00:00</div>
+    <div id="displayTime">00:00:00</div>
     <div id="btn">
-        <button id="start">Start</button>
-        <button id="stop">Stop</button>
-        <button id="reset">Reset</button>
+        <button id="start" onclick="watchStart()">Start</button>
+        <button id="stop" onclick="watchStop()">Stop</button>
+        <button id="reset" onclick="watchReset()">Reset</button>
     </div>
 
 
